Add machine translation

--- a/l10n/po/ja_JP/_guides/amqp.adoc.po
+++ b/l10n/po/ja_JP/_guides/amqp.adoc.po
@@ -91,9 +91,9 @@ msgstr "このガイドでは、1つのコンポーネントで(ランダムな)
 
 #. type: Named 'alt' AttributeList argument for macro 'image'
 #: upstream/_guides/amqp.adoc:34
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Architecture,align=center,width=80%"
-msgstr ""
+msgstr "建築物,align=center,width=80"
 
 #. type: Target for macro image
 #: upstream/_guides/amqp.adoc:34
@@ -161,8 +161,9 @@ msgstr "services:\n"
 
 #. type: delimited block =
 #: upstream/_guides/amqp.adoc:66
+#, fuzzy
 msgid "No need to start an AMQP broker when using the dev mode or for tests. Quarkus starts a broker for you automatically.  See xref:amqp-dev-services.adoc[Dev Services for AMQP] for details."
-msgstr ""
+msgstr "開発モードやテスト用にAMQPブローカーを起動する必要はありません。Quarkusは自動的にブローカーを起動します。詳細は、 link:amqp-dev-services.html[AMQPの開発サービス]を参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/amqp.adoc:69
@@ -694,8 +695,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/amqp.adoc:311
+#, fuzzy
 msgid "By default, the application tries to connect to a AMQP broker listening at `localhost:5672`.  You can configure the bootstrap server using: `java -Damqp-host=... -Damqp-port=... -jar target/quarkus-app/quarkus-run.jar`"
-msgstr ""
+msgstr "デフォルトでは、アプリケーションは `localhost:5672` をリスニングしている AMQP ブローカーへの接続を試みます。ブートストラップ・サーバーを設定するには `java -Damqp-host=…​ -Damqp-port=…​ -jar target/quarkus-app/quarkus-run.jar`"
 
 #. type: Plain text
 #: upstream/_guides/amqp.adoc:313
