--- a/l10n/po/ja_JP/_guides/cassandra.adoc.po
+++ b/l10n/po/ja_JP/_guides/cassandra.adoc.po
@@ -785,8 +785,9 @@ msgstr "link:https://javadoc.io/doc/com.datastax.oss.quarkus/cassandra-quarkus-c
 
 #. type: Plain text
 #: upstream/_guides/cassandra.adoc:417
+#, fuzzy
 msgid "If you are not familiar with Mutiny, please check xref:mutiny-primer.adoc[Mutiny - an intuitive reactive programming library]."
-msgstr ""
+msgstr "Mutinyに馴染みのない方は、 link:mutiny-primer.html[Mutiny - an intuitive reactive programming library]をご覧ください。"
 
 #. type: Plain text
 #: upstream/_guides/cassandra.adoc:419
