--- a/l10n/po/ja_JP/_guides/cli-tooling.adoc.po
+++ b/l10n/po/ja_JP/_guides/cli-tooling.adoc.po
@@ -150,13 +150,15 @@ msgstr ""
 
 #. type: delimited block =
 #: upstream/_guides/cli-tooling.adoc:83
+#, fuzzy
 msgid "While this document is a useful reference, the client help is the definitive source."
-msgstr ""
+msgstr "このドキュメントは有用な参考資料ですが、クライアントヘルプが決定的な情報源となります。"
 
 #. type: delimited block =
 #: upstream/_guides/cli-tooling.adoc:85
+#, fuzzy
 msgid "If you don't see the output you expect, use `--help` to verify that you are invoking the command with the right arguments."
-msgstr ""
+msgstr "期待通りの出力が得られない場合は、 `--help` を使って、正しい引数でコマンドを起動しているかどうかを確認してください。"
 
 #. type: Title ==
 #: upstream/_guides/cli-tooling.adoc:88
@@ -207,8 +209,9 @@ msgstr "注：上記の絵文字は正確には一致しない場合がありま
 
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:118
+#, fuzzy
 msgid "As of 2.0.2.Final, you should specify the groupId, artifactId and version using group:artifactId:version coordinate syntax directly on the command line. You can selectively omit segments to use default values:"
-msgstr ""
+msgstr "2.0.2.Finalでは、group:artifactId:version座標の構文を使ってgroupId、artifactId、バージョンをコマンドラインで直接指定する必要があります。セグメントを選択的に省略してデフォルト値を使用することもできます。"
 
 #. type: delimited block -
 #: upstream/_guides/cli-tooling.adoc:123
@@ -236,8 +239,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:132
+#, fuzzy
 msgid "The output will show your project being created:"
-msgstr ""
+msgstr "プロジェクトが作成されたことが出力されます。"
 
 #. type: delimited block -
 #: upstream/_guides/cli-tooling.adoc:149
