--- a/l10n/po/ja_JP/_guides/config-extending-support.adoc.po
+++ b/l10n/po/ja_JP/_guides/config-extending-support.adoc.po
@@ -302,19 +302,21 @@ msgstr "コンフィグソース"
 
 #. type: Plain text
 #: upstream/_guides/config-extending-support.adoc:122
+#, fuzzy
 msgid "When a Quarkus application starts, a `ConfigSource` can be initialized twice. One time for _STATIC INIT_ and a second time for _RUNTIME INIT_:"
-msgstr ""
+msgstr "Quarkusアプリケーションの起動時に、 `ConfigSource` を2回初期化することができます。1回目は _STATIC INIT_で、2回目は _RUNTIME INIT_です。"
 
 #. type: Title ====
 #: upstream/_guides/config-extending-support.adoc:123
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "STATIC INIT"
-msgstr ""
+msgstr "STATIC INIT"
 
 #. type: Plain text
 #: upstream/_guides/config-extending-support.adoc:130
+#, fuzzy
 msgid "Quarkus starts some of its services during static initialization, and `Config` is usually one of the first things that is created. In certain situations it may not be possible to add a custom `ConfigSource`. For instance, if the `ConfigSource` requires other services, like a database access, it will not be available at this stage, and cause a chicken-egg problem. For this reason, any custom `ConfigSource` requires the annotation `@io.quarkus.runtime.configuration.StaticInitSafe` to mark the source as safe to be used at this stage."
-msgstr ""
+msgstr "Quarkusは静的な初期化中にいくつかのサービスを開始しますが、 `Config` は通常、最初に作成されるものの1つです。特定の状況では、カスタムの `ConfigSource` を追加できない場合があります。例えば、 `ConfigSource` がデータベースアクセスのような他のサービスを必要とする場合、この段階では利用できず、鶏と卵の問題が発生してしまいます。このため、カスタム `ConfigSource` には、この段階で使用しても安全であるとソースをマークするための注釈 `@io.quarkus.runtime.configuration.StaticInitSafe` が必要です。"
 
 #. type: Plain text
 #: upstream/_guides/config-extending-support.adoc:134
@@ -348,24 +350,27 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/config-extending-support.adoc:158
+#, fuzzy
 msgid "The `InMemoryConfigSource` will be available during _STATIC INIT_."
-msgstr ""
+msgstr "`InMemoryConfigSource` は、 _STATIC INIT_中に利用可能になります。"
 
 #. type: Plain text
 #: upstream/_guides/config-extending-support.adoc:161
+#, fuzzy
 msgid "A custom `ConfigSource` is not automatically added during Quarkus _STATIC INIT_. It requires to be marked with the `@io.quarkus.runtime.configuration.StaticInitSafe` annotation."
-msgstr ""
+msgstr "カスタム `ConfigSource` は、Quarkusの _STATIC INIT_中に自動的に追加されません。 `@io.quarkus.runtime.configuration.StaticInitSafe` のアノテーションを付ける必要があります。"
 
 #. type: Title ====
 #: upstream/_guides/config-extending-support.adoc:162
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "RUNTIME INIT"
-msgstr ""
+msgstr "RUNTIME INIT"
 
 #. type: Plain text
 #: upstream/_guides/config-extending-support.adoc:166
+#, fuzzy
 msgid "The _RUNTIME INIT_ stage happens after _STATIC INIT_. In this stage a `ConfigSource` can be initialized again. There are no restrictions at this stage, and a custom source is added to the `Config` instance as expected."
-msgstr ""
+msgstr "_RUNTIME INIT_ステージは、 _STATIC INIT_の後に起こります。このステージでは、 `ConfigSource` を再び初期化することができます。この段階では特に制限はなく、期待通りにカスタムソースが `Config` インスタンスに追加されます。"
 
 #. type: Title ==
 #: upstream/_guides/config-extending-support.adoc:168
