--- a/l10n/po/ja_JP/_guides/credentials-provider.adoc.po
+++ b/l10n/po/ja_JP/_guides/credentials-provider.adoc.po
@@ -74,8 +74,9 @@ msgstr "`reactive-pg-client`"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:37
+#, fuzzy
 msgid "`oidc`"
-msgstr ""
+msgstr "`oidc`"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:38
