--- a/l10n/po/ja_JP/_guides/getting-started-testing.adoc.po
+++ b/l10n/po/ja_JP/_guides/getting-started-testing.adoc.po
@@ -1755,8 +1755,9 @@ msgstr "テストポートの制御"
 
 #. type: Plain text
 #: upstream/_guides/getting-started-testing.adoc:1005
+#, fuzzy
 msgid "When creating a custom `QuarkusTestResourceLifecycleManager` that needs to inject the something into the test class, the `inject` methods can be used.  If for example you have a test like the following:"
-msgstr ""
+msgstr "テストクラスにsomethingを注入する必要のあるカスタム `QuarkusTestResourceLifecycleManager` を作成する場合、 `inject` のメソッドを使用することができます。たとえば、次のようなテストがあるとします。"
 
 #. type: delimited block -
 #: upstream/_guides/getting-started-testing.adoc:1011
@@ -1788,8 +1789,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/getting-started-testing.adoc:1023
+#, fuzzy
 msgid "Making `MyWireMockResource` inject the `wireMockServer` field can be done as shown in the `inject` method of the following code snippet:"
-msgstr ""
+msgstr "`MyWireMockResource` に `wireMockServer` フィールドを注入させることは、以下のコードスニペットの `inject` メソッドに示すように行うことができます。"
 
 #. type: delimited block -
 #: upstream/_guides/getting-started-testing.adoc:1027
@@ -1853,8 +1855,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/getting-started-testing.adoc:1057
+#, fuzzy
 msgid "It is worth mentioning that this injection into the test class is not under the control of CDI and happens after CDI has performed any necessary injections into the test class."
-msgstr ""
+msgstr "このテストクラスへの注入は、CDI の制御下にはなく、CDI がテストクラスに必要な注入を行った後に行われることに注意してください。"
 
 #. type: Title ===
 #: upstream/_guides/getting-started-testing.adoc:1058
