--- a/l10n/po/ja_JP/_guides/grpc-service-implementation.adoc.po
+++ b/l10n/po/ja_JP/_guides/grpc-service-implementation.adoc.po
@@ -585,19 +585,21 @@ msgstr "最高の優先度を持つインターセプターが最初に呼び出
 
 #. type: Title ==
 #: upstream/_guides/grpc-service-implementation.adoc:287
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Testing your services"
-msgstr ""
+msgstr "サービスのテスト"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-implementation.adoc:291
+#, fuzzy
 msgid "The easiest way to test a gRPC service is to use a gRPC client as described in link:grpc-service-consumption[Consuming a gRPC Service]."
-msgstr ""
+msgstr "gRPCサービスをテストする最も簡単な方法は、「 link:grpc-service-consumption[gRPCサービスの利用]」で説明したように、gRPCクライアントを使用することです。"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-implementation.adoc:295
+#, fuzzy
 msgid "Please note that in the case of using a client to test an exposed service that does not use TLS, there is no need to provide any configuration. E.g. to test the `HelloService` defined above, one could create the following test:"
-msgstr ""
+msgstr "なお、TLS を使用していない公開サービスのテストにクライアントを使用する場合は、設定を行う必要はありませんのでご注意ください。例えば、上記で定義した `HelloService` をテストするには、次のようなテストを作成します。"
 
 #. type: delimited block -
 #: upstream/_guides/grpc-service-implementation.adoc:299
