--- a/l10n/po/ja_JP/_guides/infinispan-client.adoc.po
+++ b/l10n/po/ja_JP/_guides/infinispan-client.adoc.po
@@ -27,40 +27,45 @@ msgstr "Quarkus - Infinispanクライアント"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:13
+#, fuzzy
 msgid "Infinispan is a distributed, in-memory key/value store that provides Quarkus applications with a highly configurable and independently scalable data layer.  This extension gives you client functionality that connects applications running on Quarkus with remote Infinispan clusters."
-msgstr ""
+msgstr "Infinispanは、高度に設定可能で独立して拡張可能なデータ層をQuarkusアプリケーションに提供する、分散型のメモリ内キー／バリューストアです。この拡張機能は、Quarkus上で動作するアプリケーションとリモートのInfinispanクラスタを接続するクライアント機能を提供します。"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:15
+#, fuzzy
 msgid "To find out more about Infinispan, visit the https://infinispan.org/documentation[Infinispan documentation]."
-msgstr ""
+msgstr "Infinispanの詳細については、 link:https://infinispan.org/documentation[Infinispanのドキュメント]をご覧ください。"
 
 #. type: Title ==
 #: upstream/_guides/infinispan-client.adoc:16
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Solution"
-msgstr ""
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:20
+#, fuzzy
 msgid "We recommend that you complete each step in the following sections to create the application.  However, you can proceed directly to the completed solution as follows:"
-msgstr ""
+msgstr "アプリケーションを作成するには、以下のセクションの各ステップを完了することをお勧めします。ただし、以下のように、完成したソリューションに直接進むこともできます。"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:23
+#, fuzzy
 msgid "Clone the Git repository: `git clone {quickstarts-clone-url}` or download an {quickstarts-archive-url}[archive].  Locate the solution in the `infinispan-client-quickstart` {quickstarts-tree-url}/infinispan-client-quickstart[directory]."
-msgstr ""
+msgstr "Git リポジトリをクローンします。 `git clone {quickstarts-clone-url}` または {quickstarts-archive-url}[archive]をダウンロードします。 `infinispan-client-quickstart` {quickstarts-tree-url}/infinispan-client-quickstart[directory]でソリューションを探します。"
 
 #. type: Title ==
 #: upstream/_guides/infinispan-client.adoc:24
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Adding the Infinispan client extension"
-msgstr ""
+msgstr "Infinispanクライアントエクステンションの追加"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:27
+#, fuzzy
 msgid "Run the following command in the base directory of your Quarkus project to add the `infinispan-client` extension:"
-msgstr ""
+msgstr "Quarkusプロジェクトのベースディレクトリで以下のコマンドを実行し、 `infinispan-client` エクステンションを追加します。"
 
 #. type: delimited block -
 #: upstream/_guides/infinispan-client.adoc:31
@@ -101,24 +106,27 @@ msgstr "Infinispan クライアントは、 `src/main/resources` ディレクト
 
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:50
+#, fuzzy
 msgid "Note that Infinispan documentation refers to a `hotrod-client.properties` file.  You can configure the Infinispan client with either properties file but `hotrod-client.properties` always takes priority over `application.properties`."
-msgstr ""
+msgstr "Infinispanのドキュメントでは、 `hotrod-client.properties` のファイルを参照していることに注意してください。どちらのプロパティ・ファイルでもInfinispanクライアントを構成できますが、 `hotrod-client.properties` は常に `application.properties` よりも優先されます。"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:53
+#, fuzzy
 msgid "Additionally, you cannot update configuration properties at runtime.  If you modify `application.properties` or `hotrod-client.properties`, you must rebuild the application before those changes take effect."
-msgstr ""
+msgstr "また、ランタイムに構成プロパティを更新することはできません。 `application.properties` または `hotrod-client.properties` を変更した場合、その変更が有効になる前にアプリケーションを再構築する必要があります。"
 
 #. type: Title ==
 #: upstream/_guides/infinispan-client.adoc:54
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Connecting to Infinispan clusters"
-msgstr ""
+msgstr "Infinispanクラスターへの接続"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:57
+#, fuzzy
 msgid "Add the following properties to connect to Infinispan Server:"
-msgstr ""
+msgstr "Infinispan Serverに接続するために、以下のプロパティを追加します。"
 
 #. type: delimited block -
 #: upstream/_guides/infinispan-client.adoc:62
@@ -148,34 +156,39 @@ msgstr ""
 
 #. type: Block title
 #: upstream/_guides/infinispan-client.adoc:72
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Running Infinispan Server"
-msgstr ""
+msgstr "Infinispanサーバの起動"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:75
+#, fuzzy
 msgid "To use the Infinispan client extension, you need at least one running instance of Infinispan Server."
-msgstr ""
+msgstr "Infinispanクライアント・エクステンションを使用するには、少なくとも1つのInfinispan Serverの稼働しているインスタンスが必要です。"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:77
+#, fuzzy
 msgid "Check out our 5 minute https://infinispan.org/get-started/[Getting stated with Infinispan] tutorial to run Infinispan Server locally."
-msgstr ""
+msgstr "Infinispan Serverをローカルで実行するための5分間のチュートリアル link:https://infinispan.org/get-started/[「Getting stated with Infinispan]」をご覧ください。"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:79
+#, fuzzy
 msgid "Infinispan Server also enables authentication and security authorization by default so you need to create a user with permissions."
-msgstr ""
+msgstr "また、Infinispan Serverはデフォルトで認証とセキュリティの承認を有効にしているので、権限のあるユーザーを作成する必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:81
+#, fuzzy
 msgid "If you run the Infinispan Server image, pass the `USER=\"admin\"` and `PASS=\"password\"` parameters."
-msgstr ""
+msgstr "Infinispan Server イメージを実行する場合は、 `USER=\"admin\"` と `PASS=\"password\"` のパラメータを渡します。"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:82
+#, fuzzy
 msgid "If you run the bare metal distribution, use the Command Line Interface (CLI) as follows:"
-msgstr ""
+msgstr "ベアメタル・ディストリビューションを実行する場合は、次のようにコマンドライン・インターフェース（CLI）を使用します。"
 
 #. type: delimited block -
 #: upstream/_guides/infinispan-client.adoc:86
@@ -192,8 +205,9 @@ msgstr "認証"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:91
+#, fuzzy
 msgid "You can use the following authentication mechanisms with the Infinispan client:"
-msgstr ""
+msgstr "Infinispanクライアントでは、以下の認証機構を使用することができます。"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:93
@@ -202,8 +216,9 @@ msgstr "DIGEST-MD5"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:94
+#, fuzzy
 msgid "PLAIN (recommended only in combination with TLS encryption)"
-msgstr ""
+msgstr "PLAIN（TLS暗号化との併用のみ推奨"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:95
@@ -212,8 +227,9 @@ msgstr "EXTERNAL"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:97
+#, fuzzy
 msgid "Other authentication mechanisms, such as SCRAM and GSSAPI, are not yet verified with the Infinispan client."
-msgstr ""
+msgstr "SCRAMやGSSAPIなどの他の認証機構は、Infinispanクライアントではまだ検証されていません。"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:99
@@ -224,8 +240,9 @@ msgstr "これらを設定するためのガイドは https://infinispan.org/doc
 
 #. type: delimited block =
 #: upstream/_guides/infinispan-client.adoc:103
+#, fuzzy
 msgid "You must configure authentication in the `hotrod-client.properties` file if you use Dependency Injection."
-msgstr ""
+msgstr "Dependency Injectionを使用する場合は、 `hotrod-client.properties` ファイルで認証を設定する必要があります。"
 
 #. type: Title ==
 #: upstream/_guides/infinispan-client.adoc:105
@@ -324,13 +341,15 @@ msgstr "ユーザ型のシリアライズは、Protostreamと呼ばれるprotobu
 
 #. type: delimited block =
 #: upstream/_guides/infinispan-client.adoc:153
+#, fuzzy
 msgid "Infinispan caches can store keys and values in different encodings, but recommend using https://developers.google.com/protocol-buffers[Protocol Buffers (Protobuf)]."
-msgstr ""
+msgstr "Infinispanのキャッシュは、さまざまなエンコーディングでキーと値を保存できますが、 link:https://developers.google.com/protocol-buffers[プロトコル・バッファ（Protobuf]）の使用を推奨します。"
 
 #. type: delimited block =
 #: upstream/_guides/infinispan-client.adoc:155
+#, fuzzy
 msgid "For more information see our https://infinispan.org/docs/stable/titles/encoding/encoding.html[Cache Encoding and Marshalling] guide."
-msgstr ""
+msgstr "詳しくは、 link:https://infinispan.org/docs/stable/titles/encoding/encoding.html[Cache Encoding and Marshalling]ガイドをご覧ください。"
 
 #. type: Title ===
 #: upstream/_guides/infinispan-client.adoc:158
@@ -473,8 +492,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:238
+#, fuzzy
 msgid "Protostream provides default Protobuf mappers for commonly used types as `BigDecimal`, included in the `org.infinispan.protostream.types` package."
-msgstr ""
+msgstr "Protostream では、 `org.infinispan.protostream.types` パッケージに含まれる `BigDecimal` のように、一般的に使用される型に対するデフォルトの Protobuf マッパーが提供されています。"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:241
@@ -819,29 +839,33 @@ msgstr "その他の型は注入のためにサポートされている場合が
 
 #. type: Title ===
 #: upstream/_guides/infinispan-client.adoc:421
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Registering Protobuf Schemas with Infinispan Server"
-msgstr ""
+msgstr "InfinispanサーバへのProtobufスキーマの登録"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:424
+#, fuzzy
 msgid "You need to register the generated Protobuf schemas with Infinispan Server to perform queries or convert from `Protobuf` to other media types such as `JSON`."
-msgstr ""
+msgstr "クエリを実行したり、 `Protobuf` から `JSON` のような他のメディアタイプに変換するには、生成された Protobuf スキーマを Infinispan Server に登録する必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:428
+#, fuzzy
 msgid "You can check the schemas that exist under the `Schemas` tab by logging into Infinispan Console at `http://localhost:11222`"
-msgstr ""
+msgstr "でInfinispan Consoleにログインすると、 `Schemas` タブに存在するスキーマを確認することができます。 `&lt;a href=\"http://localhost:11222\" class=\"bare\"&gt;http://localhost:11222&lt;/a&gt;`"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:433
+#, fuzzy
 msgid "By default Protobuf schemas generated this way will be registered by this extension when the client first connects.  However, it might be required to handle the registration manually as a schema may evolve over time when used in production, so you can disable this from occurring by configuring the `quarkus.infinispan-client.use-schema-registration` to `false`."
-msgstr ""
+msgstr "デフォルトでは、この方法で生成されたProtobufスキーマは、クライアントが最初に接続したときにこのエクステンションによって登録されます。しかし、本番で使用すると時間とともにスキーマが進化する可能性があるため、登録を手動で処理する必要があるかもしれません。そのため、 `quarkus.infinispan-client.use-schema-registration` を `false` に設定することで、この現象を発生させないようにすることができます。"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:439
+#, fuzzy
 msgid "To configure the schema manually please use https://infinispan.org/docs/infinispan-operator/master/operator.html[Infinispan Operator] for Kubernetes deployments, Infinispan Console, https://infinispan.org/docs/stable/titles/rest/rest.html#rest_v2_protobuf_schemas[REST API] or the https://infinispan.org/docs/stable/titles/encoding/encoding.html#registering-sci-remote-caches_marshalling[Hot Rod Java Client]."
-msgstr ""
+msgstr "スキーマを手動で設定するには、 link:https://infinispan.org/docs/infinispan-operator/master/operator.html[Infinispan Operator]for Kubernetes deployments、Infinispan Console、 link:https://infinispan.org/docs/stable/titles/rest/rest.html#rest_v2_protobuf_schemas[REST API]、または link:https://infinispan.org/docs/stable/titles/encoding/encoding.html#registering-sci-remote-caches_marshalling[Hot Rod Java Client]をご利用ください。"
 
 #. type: Title ==
 #: upstream/_guides/infinispan-client.adoc:441
