--- a/l10n/po/ja_JP/_guides/reactive-routes.adoc.po
+++ b/l10n/po/ja_JP/_guides/reactive-routes.adoc.po
@@ -1107,8 +1107,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/reactive-routes.adoc:533
+#, fuzzy
 msgid "You can also provide strings instead of Objects, in that case the strings will be wrapped in quotes to become valid JSON values:"
-msgstr ""
+msgstr "オブジェクトの代わりに文字列を指定することもできます。その場合、文字列は引用符で囲まれ、有効なJSON値となります。"
 
 #. type: delimited block -
 #: upstream/_guides/reactive-routes.adoc:544
