--- a/l10n/po/ja_JP/_guides/redis.adoc.po
+++ b/l10n/po/ja_JP/_guides/redis.adoc.po
@@ -1070,24 +1070,27 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/redis.adoc:589
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Creating Clients Programmatically"
-msgstr ""
+msgstr "プログラムによるクライアントの作成"
 
 #. type: Plain text
 #: upstream/_guides/redis.adoc:593
+#, fuzzy
 msgid "The `RedisClient` and `ReactiveRedisClient` provide factory methods to create clients programmatically.  The client to be created are configured using the usual <<config-reference,Redis configuration>>."
-msgstr ""
+msgstr "`RedisClient` と `ReactiveRedisClient` は、プログラムでクライアントを作成するためのファクトリーメソッドを提供しています。作成されるクライアントは、通常の link:#config-reference[Redisの設定]を用いて設定されます。"
 
 #. type: delimited block =
 #: upstream/_guides/redis.adoc:600
+#, fuzzy
 msgid "This is useful to create a client dynamically in a non-CDI bean e.g a link:hibernate-orm-panache[Panache entity].  Or to create a different client when running in pub/sub mode. This mode requires two different connections because once a connection invokes a subscriber mode then it cannot be used for running other commands than the command to leave that mode."
-msgstr ""
+msgstr "これは、 link:hibernate-orm-panache[Panacheエンティティ]など、CDI以外のBeanで動的にクライアントを作成する場合に便利です。また、pub/subモードで実行する際に異なるクライアントを作成することもできます。このモードでは、2つの異なる接続が必要です。なぜなら、一度接続がサブスクライバーモードを呼び出すと、そのモードを終了するコマンド以外の他のコマンドを実行するために使用できないからです。"
 
 #. type: Plain text
 #: upstream/_guides/redis.adoc:603
+#, fuzzy
 msgid "The below code snippet shows how we can create dynamic clients using the configurations in <<multiple-clients-configuration>>."
-msgstr ""
+msgstr "以下のコードスニペットは、 link:#multiple-clients-configuration[[multiple-clients-configuration]]の設定を使用して動的なクライアントを作成する方法を示しています。"
 
 #. type: delimited block -
 #: upstream/_guides/redis.adoc:607
