--- a/l10n/po/ja_JP/_guides/scheduler-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/scheduler-reference.adoc.po
@@ -372,8 +372,9 @@ msgstr "同時実行はスキップされます。"
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:203
 #: upstream/_guides/scheduler-reference.adoc:256
+#, fuzzy
 msgid "A CDI event of type `io.quarkus.scheduler.SkippedExecution` is fired when an execution of a scheduled method is skipped."
-msgstr ""
+msgstr "スケジュールされたメソッドの実行がスキップされると、 `io.quarkus.scheduler.SkippedExecution` のタイプのCDIイベントが発生します。"
 
 #. type: Title ===
 #: upstream/_guides/scheduler-reference.adoc:205
@@ -384,8 +385,9 @@ msgstr "同時実行"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:209
+#, fuzzy
 msgid "You can define the logic to skip any execution of a scheduled method via `@Scheduled#skipExecutionIf()`.  The specified bean class must implement `io.quarkus.scheduler.Scheduled.SkipPredicate` and the execution is skipped if the result of the `test()` method is `true`."
-msgstr ""
+msgstr "`@Scheduled#skipExecutionIf()` を通じて、スケジュールされたメソッドの実行をスキップするロジックを定義することができます。指定されたBeanクラスは、 `io.quarkus.scheduler.Scheduled.SkipPredicate` を実装する必要があり、 `test()` メソッドの結果が `true` である場合に実行がスキップされます。"
 
 #. type: delimited block -
 #: upstream/_guides/scheduler-reference.adoc:213
@@ -434,23 +436,27 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:232
+#, fuzzy
 msgid "A bean instance of `MyPredicate.class` is used to evaluate whether an execution should be skipped. There must be exactly one bean that has the specified class in its set of bean types, otherwise the build fails."
-msgstr ""
+msgstr "`MyPredicate.class` の Bean インスタンスは、実行をスキップすべきかどうかを評価するために使用されます。ビーンタイプのセットに指定されたクラスを持つビーンが正確に1つ存在する必要があり、そうでない場合はビルドが失敗します。"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:233
+#, fuzzy
 msgid "The scope of the bean must be active during execution."
-msgstr ""
+msgstr "ビーンのスコープは，実行中にアクティブでなければならない。"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:234
+#, fuzzy
 msgid "`Jobs.everySecond()` is skipped until `MyService.isStarted()` returns `true`."
-msgstr ""
+msgstr "`Jobs.everySecond()` は、 `MyService.isStarted()` が `true` を返すまでスキップされます。"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:236
+#, fuzzy
 msgid "Note that this is an equivalent of the following code:"
-msgstr ""
+msgstr "なお、これは以下のコードと同等のものです。"
 
 #. type: delimited block -
 #: upstream/_guides/scheduler-reference.adoc:251
@@ -467,8 +473,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:254
+#, fuzzy
 msgid "The main idea is to keep the the logic to skip the execution outside the scheduled business methods so that it can be reused and refactored easily."
-msgstr ""
+msgstr "主なアイデアは、スケジュールされたビジネスメソッドの外で実行をスキップするロジックを維持することで、再利用やリファクタリングが容易にできるようにすることです。"
 
 #. type: Title ==
 #: upstream/_guides/scheduler-reference.adoc:257
