--- a/l10n/po/ja_JP/_guides/security-openid-connect-client.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-client.adoc.po
@@ -793,8 +793,9 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-client.adoc:373
 #: upstream/_guides/security-openid-connect-client.adoc:408
+#, fuzzy
 msgid "or with the secret retrieved from a link:credentials-provider[CredentialsProvider]:"
-msgstr ""
+msgstr "または link:credentials-provider[CredentialsProvider]から取得したシークレットを使用しています。"
 
 #. type: delimited block -
 #: upstream/_guides/security-openid-connect-client.adoc:378
