--- a/l10n/po/ja_JP/_guides/security-openid-connect-web-authentication.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-web-authentication.adoc.po
@@ -1281,18 +1281,21 @@ msgstr "プロバイダーエンドポイントの設定"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:588
+#, fuzzy
 msgid "`quarkus.oidc.runtime.OidcProviderClient` is used when a remote request to an OpenId Connect Provider has to be done. It has to authenticate to the OpenId Connect Provider when the authorization code has to be exchanged for the ID, access and refresh tokens, when the ID and access tokens have to be refreshed or introspected."
-msgstr ""
+msgstr "`quarkus.oidc.runtime.OidcProviderClient` は、OpenId Connect Provider へのリモートリクエストが必要な場合に使用します。ID トークン、アクセストークン、リフレッシュトークンと認証コードを交換するとき、ID トークン、アクセストークンをリフレッシュするとき、イントロスペクトするときに、OpenId Connect Provider を認証する必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:590
+#, fuzzy
 msgid "All the https://openid.net/specs/openid-connect-core-1_0.html#ClientAuthentication[OIDC Client Authentication] options are supported, for example:"
-msgstr ""
+msgstr "すべての link:https://openid.net/specs/openid-connect-core-1_0.html#ClientAuthentication[OIDCクライアント認証]オプションがサポートされていますが、例えば"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:592
+#, fuzzy
 msgid "`client_secret_basic`:"
-msgstr ""
+msgstr "`client_secret_basic` 。"
 
 #. type: delimited block -
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:598
@@ -1305,8 +1308,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:601
+#, fuzzy
 msgid "or"
-msgstr ""
+msgstr "または"
 
 #. type: delimited block -
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:607
@@ -1320,8 +1324,9 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:610
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:644
+#, fuzzy
 msgid "or with the secret retrieved from a link:credentials-provider[CredentialsProvider]:"
-msgstr ""
+msgstr "または link:credentials-provider[CredentialsProvider]から取得したシークレットを使用しています。"
 
 #. type: delimited block -
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:615
@@ -1344,8 +1349,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:623
+#, fuzzy
 msgid "`client_secret_post`:"
-msgstr ""
+msgstr "`client_secret_post` 。"
 
 #. type: delimited block -
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:630
@@ -1359,8 +1365,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:633
+#, fuzzy
 msgid "`client_secret_jwt`:"
-msgstr ""
+msgstr "`client_secret_jwt` 。"
 
 #. type: delimited block -
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:641
@@ -1385,8 +1392,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:657
+#, fuzzy
 msgid "`private_key_jwt` with the PEM key file:"
-msgstr ""
+msgstr "`private_key_jwt` 、PEMキーファイルを使用します。"
 
 #. type: delimited block -
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:665
@@ -1401,8 +1409,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:668
+#, fuzzy
 msgid "`private_key_jwt` with the key store file:"
-msgstr ""
+msgstr "`private_key_jwt` 、キーストアファイルを使用します。"
 
 #. type: delimited block -
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:681
@@ -1422,8 +1431,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:684
+#, fuzzy
 msgid "Using `client_secret_jwt` or `private_key_jwt` authentication methods ensures that no client secret goes over the wire."
-msgstr ""
+msgstr "`client_secret_jwt` または `private_key_jwt` 認証方法を使用することで、クライアントの秘密がワイヤー上を通過することはありません。"
 
 #. type: Title ==
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:686
@@ -1867,8 +1877,9 @@ msgstr "マルチテナントへの対応方法については、 link:security-
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:913
+#, fuzzy
 msgid "link:security-openid-connect-dev-services[Dev Services for OpenId Connect]"
-msgstr ""
+msgstr "link:security-openid-connect-dev-services[OpenId Connectの開発サービス]"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:913
