--- a/l10n/po/ja_JP/_guides/websockets.adoc.po
+++ b/l10n/po/ja_JP/_guides/websockets.adoc.po
@@ -156,8 +156,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:73
+#, fuzzy
 msgid "If you only want to use the WebSocket client you should include `quarkus-websockets-client` instead."
-msgstr ""
+msgstr "WebSocketクライアントのみを使用したい場合は、代わりに `quarkus-websockets-client` を含める必要があります。"
 
 #. type: Title ==
 #: upstream/_guides/websockets.adoc:74
