--- a/l10n/po/ja_JP/_guides/amazon-lambda-http.adoc.po
+++ b/l10n/po/ja_JP/_guides/amazon-lambda-http.adoc.po
@@ -493,24 +493,27 @@ msgstr "ネイティブイメージをビルドしていて、Lambda で link:ht
 
 #. type: Title ==
 #: upstream/_guides/amazon-lambda-http.adoc:284
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Security Integration"
-msgstr ""
+msgstr "セキュリティ・インテグレーション"
 
 #. type: Plain text
 #: upstream/_guides/amazon-lambda-http.adoc:289
+#, fuzzy
 msgid "When you invoke an HTTP request on the API Gateway, the Gateway turns that HTTP request into a JSON event document that is forwarded to a Quarkus Lambda.  The Quarkus Lambda parses this json and converts in into an internal representation of an HTTP request that can be consumed by any HTTP framework Quarkus supports (JAX-RS, servlet, Vert.x Web)."
-msgstr ""
+msgstr "API GatewayでHTTPリクエストを呼び出すと、GatewayはそのHTTPリクエストを、Quarkus Lambdaに転送されるJSONイベントドキュメントに変換します。Quarkus Lambdaは、このJSONを解析して、QuarkusがサポートするHTTPフレームワーク（JAX-RS、サーブレット、Vert.x Web）で消費できるHTTPリクエストの内部表現に変換します。"
 
 #. type: Plain text
 #: upstream/_guides/amazon-lambda-http.adoc:296
+#, fuzzy
 msgid "API Gateway supports many different ways to securely invoke on your HTTP endpoints that are backed by Lambda and Quarkus.  If you enable it, Quarkus will automatically parse relevant parts of the https://docs.aws.amazon.com/apigateway/latest/developerguide/http-api-develop-integrations-lambda.html[event json document] and look for security based metadata and register a `java.security.Principal` internally that can be looked up in JAX-RS by injecting a `javax.ws.rs.core.SecurityContext`, via `HttpServletRequest.getUserPrincipal()` in servlet, and `RouteContext.user()` in Vert.x Web.  If you want more security information, the `Principal` object can be typecast to a class that will give you more information."
-msgstr ""
+msgstr "API Gatewayは、LambdaとQuarkusによってバックアップされたHTTPエンドポイントを安全に呼び出すためのさまざまな方法をサポートしています。これを有効にすると、Quarkusは link:https://docs.aws.amazon.com/apigateway/latest/developerguide/http-api-develop-integrations-lambda.html[イベントjsonドキュメント]の関連部分を自動的に解析してセキュリティベースのメタデータを探し、 `java.security.Principal` を内部的に登録します。このメタデータは、 `javax.ws.rs.core.SecurityContext` を注入することでJAX-RSで調べることができ、サーブレットでは `HttpServletRequest.getUserPrincipal()` を介して、Vert.x Webでは `RouteContext.user()` を介して調べることができます。より多くのセキュリティ情報が必要な場合は、 `Principal` オブジェクトを、より多くの情報を提供するクラスにタイプキャストすることができます。"
 
 #. type: Plain text
 #: upstream/_guides/amazon-lambda-http.adoc:298
+#, fuzzy
 msgid "To enable this security feature, add this to your `application.properties` file:"
-msgstr ""
+msgstr "このセキュリティ機能を有効にするには、 `application.properties` ファイルに追加してください。"
 
 #. type: delimited block -
 #: upstream/_guides/amazon-lambda-http.adoc:300
@@ -520,137 +523,139 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/amazon-lambda-http.adoc:304
+#, fuzzy
 msgid "Here's how its mapped:"
-msgstr ""
+msgstr "そのマッピングは以下の通りです。"
 
 #. type: Block title
 #: upstream/_guides/amazon-lambda-http.adoc:305
 #: upstream/_guides/amazon-lambda-http.adoc:334
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "HTTP `quarkus-amazon-lambda-http`"
-msgstr ""
+msgstr "HTTP `quarkus-amazon-lambda-http`"
 
 #. type: Table
 #: upstream/_guides/amazon-lambda-http.adoc:308
 #: upstream/_guides/amazon-lambda-http.adoc:318
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Auth Type"
-msgstr ""
+msgstr "認証タイプ"
 
 #. type: Table
 #: upstream/_guides/amazon-lambda-http.adoc:308
 #: upstream/_guides/amazon-lambda-http.adoc:318
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Principal Class"
-msgstr ""
+msgstr "プリンシパルクラス"
 
 #. type: Table
 #: upstream/_guides/amazon-lambda-http.adoc:309
 #: upstream/_guides/amazon-lambda-http.adoc:319
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Json path of Principal Name"
-msgstr ""
+msgstr "プリンシパルネームのJsonパス"
 
 #. type: Table
 #: upstream/_guides/amazon-lambda-http.adoc:309
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Cognito JWT"
-msgstr ""
+msgstr "コグニートJWT"
 
 #. type: Table
 #: upstream/_guides/amazon-lambda-http.adoc:309
 #: upstream/_guides/amazon-lambda-http.adoc:319
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`io.quarkus.amazon.lambda.http.CognitoPrincipal`"
-msgstr ""
+msgstr "`io.quarkus.amazon.lambda.http.CognitoPrincipal`"
 
 #. type: Table
 #: upstream/_guides/amazon-lambda-http.adoc:310
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`requestContext.authorizer.jwt.claims.cognito:username`"
-msgstr ""
+msgstr "`requestContext.authorizer.jwt.claims.cognito:username`"
 
 #. type: Table
 #: upstream/_guides/amazon-lambda-http.adoc:310
 #: upstream/_guides/amazon-lambda-http.adoc:320
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "IAM"
-msgstr ""
+msgstr "IAM"
 
 #. type: Table
 #: upstream/_guides/amazon-lambda-http.adoc:310
 #: upstream/_guides/amazon-lambda-http.adoc:320
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`io.quarkus.amazon.lambda.http.IAMPrincipal`"
-msgstr ""
+msgstr "`io.quarkus.amazon.lambda.http.IAMPrincipal`"
 
 #. type: Table
 #: upstream/_guides/amazon-lambda-http.adoc:311
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`requestContext.authorizer.iam.userId`"
-msgstr ""
+msgstr "`requestContext.authorizer.iam.userId`"
 
 #. type: Table
 #: upstream/_guides/amazon-lambda-http.adoc:311
 #: upstream/_guides/amazon-lambda-http.adoc:321
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Custom Lambda"
-msgstr ""
+msgstr "カスタムラムダ"
 
 #. type: Table
 #: upstream/_guides/amazon-lambda-http.adoc:311
 #: upstream/_guides/amazon-lambda-http.adoc:321
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`io.quarkus.amazon.lambda.http.CustomPrincipal`"
-msgstr ""
+msgstr "`io.quarkus.amazon.lambda.http.CustomPrincipal`"
 
 #. type: Table
 #: upstream/_guides/amazon-lambda-http.adoc:313
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`requestContext.authorizer.lambda.principalId`"
-msgstr ""
+msgstr "`requestContext.authorizer.lambda.principalId`"
 
 #. type: Block title
 #: upstream/_guides/amazon-lambda-http.adoc:315
 #: upstream/_guides/amazon-lambda-http.adoc:375
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "REST `quarkus-amazon-lambda-rest`"
-msgstr ""
+msgstr "REST `quarkus-amazon-lambda-rest`"
 
 #. type: Table
 #: upstream/_guides/amazon-lambda-http.adoc:319
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Cognito"
-msgstr ""
+msgstr "コグニート"
 
 #. type: Table
 #: upstream/_guides/amazon-lambda-http.adoc:320
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`requestContext.authorizer.claims.cognito:username`"
-msgstr ""
+msgstr "`requestContext.authorizer.claims.cognito:username`"
 
 #. type: Table
 #: upstream/_guides/amazon-lambda-http.adoc:321
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`requestContext.identity.user`"
-msgstr ""
+msgstr "`requestContext.identity.user`"
 
 #. type: Table
 #: upstream/_guides/amazon-lambda-http.adoc:323
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`requestContext.authorizer.principalId`"
-msgstr ""
+msgstr "`requestContext.authorizer.principalId`"
 
 #. type: Title ==
 #: upstream/_guides/amazon-lambda-http.adoc:325
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Custom Security Integration"
-msgstr ""
+msgstr "カスタム・セキュリティ・インテグレーション"
 
 #. type: Plain text
 #: upstream/_guides/amazon-lambda-http.adoc:333
+#, fuzzy
 msgid "The default support for AWS security only maps the principal name to Quarkus security APIs and does nothing to map claims or roles or permissions.  You have can full control how security metadata in the lambda HTTP event is mapped to Quarkus security APIs using implementations of the `io.quarkus.amazon.lambda.http.LambdaIdentityProvider` interface.  By implementing this interface, you can do things like define role mappings for your principal or publish additional attributes provided by IAM or Cognito or your Custom Lambda security integration."
-msgstr ""
+msgstr "AWSセキュリティのデフォルトのサポートでは、プリンシパル名をQuarkusセキュリティAPIにマッピングするだけで、クレームやロール、パーミッションをマッピングすることはありません。 `io.quarkus.amazon.lambda.http.LambdaIdentityProvider` インターフェースの実装を使用して、ラムダHTTPイベント内のセキュリティメタデータをQuarkusセキュリティAPIにマッピングする方法を完全に制御することができます。このインターフェイスを実装することで、プリンシパルのロールマッピングを定義したり、IAMやCognito、カスタムLambdaのセキュリティ統合で提供される追加属性を公開したりすることができます。"
 
 #. type: delimited block -
 #: upstream/_guides/amazon-lambda-http.adoc:338
@@ -708,8 +713,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/amazon-lambda-http.adoc:374
+#, fuzzy
 msgid "For HTTP, the important method to override is `LambdaIdentityProvider.authenticate(APIGatewayV2HTTPEvent event)`.  From this you will allocate a SecurityIdentity based on how you want to map security data from `APIGatewayV2HTTPEvent`"
-msgstr ""
+msgstr "HTTP の場合、オーバーライドする重要なメソッドは `LambdaIdentityProvider.authenticate(APIGatewayV2HTTPEvent event)` です。からのセキュリティデータをどのようにマッピングするかに基づいて、SecurityIdentity を割り当てることになります。 `APIGatewayV2HTTPEvent`"
 
 #. type: delimited block -
 #: upstream/_guides/amazon-lambda-http.adoc:381
@@ -766,13 +772,15 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/amazon-lambda-http.adoc:412
+#, fuzzy
 msgid "For REST, the important method to override is `LambdaIdentityProvider.authenticate(AwsProxyRequest event)`.  From this you will allocate a SecurityIdentity based on how you want to map security data from `AwsProxyRequest`."
-msgstr ""
+msgstr "REST の場合、オーバーライドする重要なメソッドは `LambdaIdentityProvider.authenticate(AwsProxyRequest event)` です。ここから、 `AwsProxyRequest` のセキュリティデータをどのようにマッピングするかに基づいて、SecurityIdentity を割り当てることになります。"
 
 #. type: Plain text
 #: upstream/_guides/amazon-lambda-http.adoc:414
+#, fuzzy
 msgid "Your implemented provider must be a CDI bean.  Here's an example:"
-msgstr ""
+msgstr "実装されるプロバイダは、CDI Beanである必要があります。以下はその例です。"
 
 #. type: delimited block -
 #: upstream/_guides/amazon-lambda-http.adoc:418
@@ -826,8 +834,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/amazon-lambda-http.adoc:445
+#, fuzzy
 msgid "Here's the same example, but with the AWS Gateway REST API:"
-msgstr ""
+msgstr "以下は同じ例ですが、AWS Gateway REST APIを使用しています。"
 
 #. type: delimited block -
 #: upstream/_guides/amazon-lambda-http.adoc:455
@@ -855,19 +864,21 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/amazon-lambda-http.adoc:477
+#, fuzzy
 msgid "Quarkus should automatically discover this implementation and use it instead of the default implementation discussed earlier."
-msgstr ""
+msgstr "Quarkusはこの実装を自動的に検出し、前述のデフォルトの実装の代わりに使用します。"
 
 #. type: Title ==
 #: upstream/_guides/amazon-lambda-http.adoc:478
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Simple SAM Local Principal"
-msgstr ""
+msgstr "Simple SAM Local Principal"
 
 #. type: Plain text
 #: upstream/_guides/amazon-lambda-http.adoc:482
+#, fuzzy
 msgid "If you are testing your application with `sam local` you can hardcode a principal name to use when your application runs by setting the `QUARKUS_AWS_LAMBDA_FORCE_USER_NAME` environment variable"
-msgstr ""
+msgstr "アプリケーションを `sam local` でテストしている場合、環境変数 `QUARKUS_AWS_LAMBDA_FORCE_USER_NAME` を設定することで、アプリケーションの実行時に使用するプリンシパル名をハードコードすることができます。"
 
 #~ msgid "The `quarkus-amazon-lambda-http` extension allows you to write microservices with RESTEasy (JAX-RS), Undertow (servlet), Vert.x Web, link:funqy-http[Funqy HTTP] or any other Quarkus HTTP API that runs on top of Vert.x Web and deploy them to Amazon Lambda using https://aws.amazon.com/api-gateway/[Amazon's API Gateway] and https://docs.aws.amazon.com/serverless-application-model/latest/developerguide/what-is-sam.html[Amazon's SAM framework]."
 #~ msgstr "`quarkus-amazon-lambda-http` エクステンションを使うと、RESTEasy (JAX-RS)、Undertow (サーブレット)、Vert.x Web、または link:funqy-http[Funqy HTTP] でマイクロサービスを書き、 link:https://aws.amazon.com/api-gateway/[AmazonのAPI Gateway] とAmazonの link:https://docs.aws.amazon.com/serverless-application-model/latest/developerguide/what-is-sam.html[SAMフレームワークを] 使って、これらのマイクロサービスをAmazon Lambdaとしてデプロイ可能な状態にすることができます。"
