--- a/l10n/po/ja_JP/_guides/building-native-image.adoc.po
+++ b/l10n/po/ja_JP/_guides/building-native-image.adoc.po
@@ -1081,49 +1081,52 @@ msgstr "C言語でのネイティブコンパイルをサポート"
 
 #. type: Plain text
 #: upstream/_guides/building-native-image.adoc:633
+#, fuzzy
 msgid "In certain circumstances, you may want to build the native image in a separate step.  For example, in a CI/CD pipeline, you may want to have one step to generate the source that will be used for the native image generation and another step to use these sources to actually build the native executable.  For this use case, you can set the `quarkus.package.type=native-sources`.  This will execute the java compilation as if you would have started native compilation (`-Pnative`), but stops before triggering the actual call to GraalVM's `native-image`."
-msgstr ""
+msgstr "状況によっては、ネイティブイメージを別のステップで構築したい場合があります。例えば、CI/CDパイプラインでは、ネイティブイメージの生成に使用するソースを生成するステップと、これらのソースを使用して実際にネイティブの実行ファイルをビルドするステップを用意したい場合があります。このユースケースでは、 `quarkus.package.type=native-sources` を設定します。これにより、ネイティブ・コンパイル（ `-Pnative` ）を開始したかのように、javaのコンパイルが実行されますが、GraalVMの `native-image` への実際の呼び出しをトリガーする前に停止します。"
 
 #. type: Plain text
 #: upstream/_guides/building-native-image.adoc:635
 #: upstream/_guides/building-native-image.adoc:642
 #: upstream/_guides/building-native-image.adoc:653
 #: upstream/_guides/building-native-image.adoc:669
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_guides/building-native-image.adoc:637
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "$ ./mvnw clean package -Dquarkus.package.type=native-sources\n"
 "---\n"
-msgstr ""
+msgstr "$ ./mvnw clean package -Dquarkus.package.type=native-sources ---."
 
 #. type: Plain text
 #: upstream/_guides/building-native-image.adoc:640
+#, fuzzy
 msgid "After compilation has finished, you find the build artifact in `target/native-sources`:"
-msgstr ""
+msgstr "コンパイルが終了すると、 `target/native-sources` にビルドの成果物があります。"
 
 #. type: Plain text
 #: upstream/_guides/building-native-image.adoc:646
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "$ cd target/native-sources\n"
 "$ ls\n"
 "native-image.args  getting-started-1.0.0-SNAPSHOT-runner.jar\n"
 "---\n"
-msgstr ""
+msgstr "$ cd target/native-sources $ ls native-image.args getting-started-1.0.0-SNAPSHOT-runner.jar ---。"
 
 #. type: Plain text
 #: upstream/_guides/building-native-image.adoc:651
+#, fuzzy
 msgid "You see that, beside the expected JAR, a file `native-image.args` was created.  This file holds all parameters (including the name of the JAR to compile) to pass along to GraalVM's `native-image` command.  If you have GraalVM installed, you can start the native compilation by executing:"
-msgstr ""
+msgstr "想定していたJARの他に、 `native-image.args` というファイルが作成されているのがわかります。このファイルには、GraalVMの `native-image` コマンドに渡すすべてのパラメータ（コンパイルするJARの名前など）が含まれています。GraalVMがインストールされていれば、以下のコマンドを実行することで、ネイティブ・コンパイルを開始することができます。"
 
 #. type: Plain text
 #: upstream/_guides/building-native-image.adoc:662
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "$ cd target/native-source\n"
 "$ native-image $(cat native-image.args)\n"
@@ -1134,21 +1137,23 @@ msgid ""
 "getting-started-1.0.0-SNAPSHOT-runner.build_artifacts.txt\n"
 "getting-started-1.0.0-SNAPSHOT-runner.jar\n"
 "---\n"
-msgstr ""
+msgstr "$ cd target/native-source $ native-image $(cat native-image.args) ... $ ls native-image.args getting-started-1.0.0-SNAPSHOT-runner getting-started-1.0.0-SNAPSHOT-runner.build_artifacts.txt getting-started-1.0.0-SNAPSHOT-runner.jar ---..."
 
 #. type: Plain text
 #: upstream/_guides/building-native-image.adoc:665
+#, fuzzy
 msgid "The process for Gradle is analogous."
-msgstr ""
+msgstr "Gradleのプロセスも同様です。"
 
 #. type: Plain text
 #: upstream/_guides/building-native-image.adoc:667
+#, fuzzy
 msgid "Running the build process in a container is also possible:"
-msgstr ""
+msgstr "ビルドプロセスをコンテナ内で実行することも可能です。"
 
 #. type: Plain text
 #: upstream/_guides/building-native-image.adoc:679
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "cd target/native-image\n"
 "docker run \\\n"
@@ -1160,72 +1165,82 @@ msgid ""
 "  quay.io/quarkus/ubi-quarkus-native-image:21.1.0-java11 \\ <3>\n"
 "  -c \"native-image $(cat native-image.args) -J-Xmx4g\" <4>\n"
 "---\n"
-msgstr ""
+msgstr "cd target/native-image docker run ˶‾᷅˵ -it ˶‾᷅˵ -v $(pwd):/work &lt;1&gt; -w /work &lt;2&gt; --entrypoint bin/sh ˶‾᷅˵ -qay.io/quarkus/ubi-quarkus-native-image:21.1.0-java11 ˶‾᷅˵ -c \"native-image $(cat native-image.args) -J-Xmx4g\" &lt;4&gt; ---。"
 
 #. type: Plain text
 #: upstream/_guides/building-native-image.adoc:682
+#, fuzzy
 msgid "Mount the host's directory `target/native-image` to the container's `/work`. Thus, the generated binary will also be written to this directory."
-msgstr ""
+msgstr "ホストのディレクトリ `target/native-image` をコンテナの `/work` にマウントします。したがって，生成されたバイナリもこのディレクトリに書き込まれます。"
 
 #. type: Plain text
 #: upstream/_guides/building-native-image.adoc:683
+#, fuzzy
 msgid "Switch the working directory to `/work`, which we have mounted in <1>."
-msgstr ""
+msgstr "作業ディレクトリを、&lt;1&gt;でマウントした `/work` に切り替えます。"
 
 #. type: Plain text
 #: upstream/_guides/building-native-image.adoc:684
+#, fuzzy
 msgid "Use the `quay.io/quarkus/ubi-quarkus-native-image:21.1.0-java11` docker image introduced in <<#multistage-docker,Using a multi-stage Docker build>> to build the native image."
-msgstr ""
+msgstr "ネイティブイメージの構築には、 link:#multistage-docker[Using a multi-stage Docker build]で紹介した `quay.io/quarkus/ubi-quarkus-native-image:21.1.0-java11` docker imageを使用します。"
 
 #. type: Plain text
 #: upstream/_guides/building-native-image.adoc:685
+#, fuzzy
 msgid "Call `native-image` with the content of file `native-image.args` as arguments. We also supply an additional argument to limit the process's maximum memory limitation to 4 Gigabyte."
-msgstr ""
+msgstr "ファイル `native-image.args` の内容を引数として `native-image` を呼び出します。また、プロセスの最大メモリ制限を4ギガバイトに制限するための追加の引数を供給します。"
 
 #. type: Plain text
 #: upstream/_guides/building-native-image.adoc:687
+#, fuzzy
 msgid "In a CI/CD setup, we would:"
-msgstr ""
+msgstr "CI/CDのセットアップでは、私たちは"
 
 #. type: Plain text
 #: upstream/_guides/building-native-image.adoc:689
+#, fuzzy
 msgid "register the output of the step executing `./mvnw ...` command (i.e. directory `target/native-image`) as build artifact,"
-msgstr ""
+msgstr "`./mvnw …​` コマンドを実行したステップの出力（例：ディレクトリ `target/native-image` ）をビルド成果物として登録します。"
 
 #. type: Plain text
 #: upstream/_guides/building-native-image.adoc:690
+#, fuzzy
 msgid "require this artifact in the step executing the `native-image ...` command, and"
-msgstr ""
+msgstr "`native-image …​` コマンドを実行するステップで、このアーティファクトを必要とします。"
 
 #. type: Plain text
 #: upstream/_guides/building-native-image.adoc:691
+#, fuzzy
 msgid "register the output of the step executing the `native-image ...` command (i.e. files matching `target/*runner`) as build artifact."
-msgstr ""
+msgstr "`native-image …​` コマンドを実行したステップの出力（すなわち `target/*runner` に一致するファイル）をビルドアーティファクトとして登録します。"
 
 #. type: Plain text
 #: upstream/_guides/building-native-image.adoc:693
+#, fuzzy
 msgid "The environment executing `1` only needs access to a Java- and a Maven- (or Gradle)-installation, while the environment executing `3` only needs access to a GraalVM installation (including the `native-image` feature)."
-msgstr ""
+msgstr "`1` を実行する環境では、Java と Maven（または Gradle）のインストールへのアクセスが必要ですが、 `3` を実行する環境では、GraalVM のインストール（ `native-image` の機能を含む）へのアクセスが必要です。"
 
 #. type: Plain text
 #: upstream/_guides/building-native-image.adoc:695
+#, fuzzy
 msgid "The generated binary can then be used to create a container image, as explained above."
-msgstr ""
+msgstr "生成されたバイナリは、上述のようにコンテナイメージの作成に使用できます。"
 
 #. type: Plain text
 #: upstream/_guides/building-native-image.adoc:697
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "===\n"
-msgstr ""
+msgstr "==="
 
 #. type: Plain text
 #: upstream/_guides/building-native-image.adoc:700
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "If you are running on a Windows machine, please keep in mind that the binary was created within a Linux docker container.\n"
 "Hence, the binary will not be executable on the host Windows machine.\n"
 "===\n"
-msgstr ""
+msgstr "Windowsマシンで実行している場合は、バイナリがLinuxのdockerコンテナ内で作成されていることに留意してください。したがって、バイナリはホストのWindowsマシンでは実行できません。 ==="
 
 #. type: Plain text
 #: upstream/_guides/building-native-image.adoc:708
