--- a/l10n/po/ja_JP/_guides/class-loading-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/class-loading-reference.adoc.po
@@ -330,29 +330,33 @@ msgstr "開発モードとテストモードでクラスローディングのい
 
 #. type: Title ==
 #: upstream/_guides/class-loading-reference.adoc:185
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Hiding/Removing classes and resources from dependencies"
-msgstr ""
+msgstr "クラスやリソースを依存関係から隠す/取り除く"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:189
+#, fuzzy
 msgid "It is possible to hide/remove classes and resources from dependencies. This is an advanced option, but it can be useful at times. This is done via the `quarkus.class-loading.removed-resources` config key, for example:"
-msgstr ""
+msgstr "クラスやリソースを依存関係から隠したり、削除したりすることができます。これは上級者向けのオプションですが、ときには便利なこともあります。これは、 `quarkus.class-loading.removed-resources` config keyなどで行います。"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:191
+#, fuzzy
 msgid "`quarkus.class-loading.removed-resources.\"io.quarkus\\:quarkus-integration-test-shared-library\"=io/quarkus/it/shared/RemovedResource.class`"
-msgstr ""
+msgstr "`quarkus.class-loading.removed-resources.\"io.quarkus\\:quarkus-integration-test-shared-library\"=io/quarkus/it/shared/RemovedResource.class`"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:193
+#, fuzzy
 msgid "This will remove the `RemovedResource.class` file from the `io.quarkus:quarkus-integration-test-shared-library` artifact."
-msgstr ""
+msgstr "これにより、 `io.quarkus:quarkus-integration-test-shared-library` のアーティファクトから `RemovedResource.class` のファイルが削除されます。"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:196
+#, fuzzy
 msgid "Even though this option is a class loading option it will also affect the generated application, so when the application is created removed resources will not be accessible."
-msgstr ""
+msgstr "このオプションはクラスの読み込みオプションですが、生成されたアプリケーションにも影響するため、アプリケーションが作成されると、削除されたリソースにはアクセスできなくなります。"
 
 #. type: Title ==
 #: upstream/_guides/class-loading-reference.adoc:197
