--- a/l10n/po/ja_JP/_guides/command-mode-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/command-mode-reference.adoc.po
@@ -32,24 +32,27 @@ msgstr "このリファレンスでは、実行して終了するアプリケー
 
 #. type: Title ==
 #: upstream/_guides/command-mode-reference.adoc:12
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Solution"
-msgstr ""
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:16
+#, fuzzy
 msgid "We recommend that you follow the instructions in the next sections and create the application step by step.  However, you can go right to the completed example."
-msgstr ""
+msgstr "次のセクションの指示に従って、段階的にアプリケーションを作成していくことをお勧めします。ただし、完成した例にすぐにアクセスすることもできます。"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:18
+#, fuzzy
 msgid "Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive]."
-msgstr ""
+msgstr "Gitリポジトリをクローンする： `git clone {quickstarts-clone-url}` 、または{quickstarts-archive-url}[archive]をダウンロードする。"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:20
+#, fuzzy
 msgid "The solution is located in the `getting-started-command-mode` {quickstarts-tree-url}/getting-started-command-mode[directory]."
-msgstr ""
+msgstr "このソリューションは `getting-started-command-mode` {quickstarts-tree-url}/getting-started-command-mode[directory]にあります。"
 
 #. type: Title ==
 #: upstream/_guides/command-mode-reference.adoc:21
