--- a/l10n/po/ja_JP/_guides/context-propagation.adoc.po
+++ b/l10n/po/ja_JP/_guides/context-propagation.adoc.po
@@ -48,24 +48,27 @@ msgstr "link:https://github.com/eclipse/microprofile-context-propagation[MicroPr
 
 #. type: Title ==
 #: upstream/_guides/context-propagation.adoc:26
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Solution"
-msgstr ""
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/context-propagation.adoc:30
+#, fuzzy
 msgid "We recommend that you follow the instructions in the next sections and create the application step by step.  However, you can go right to the completed example."
-msgstr ""
+msgstr "次のセクションの指示に従って、段階的にアプリケーションを作成していくことをお勧めします。ただし、完成した例にすぐにアクセスすることもできます。"
 
 #. type: Plain text
 #: upstream/_guides/context-propagation.adoc:32
+#, fuzzy
 msgid "Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive]."
-msgstr ""
+msgstr "Gitリポジトリをクローンする： `git clone {quickstarts-clone-url}` 、または{quickstarts-archive-url}[archive]をダウンロードする。"
 
 #. type: Plain text
 #: upstream/_guides/context-propagation.adoc:34
+#, fuzzy
 msgid "The solution is located in the `context-propagation-quickstart` {quickstarts-tree-url}/context-propagation-quickstart[directory]."
-msgstr ""
+msgstr "このソリューションは `context-propagation-quickstart` {quickstarts-tree-url}/context-propagation-quickstart[directory]にあります。"
 
 #. type: Title ==
 #: upstream/_guides/context-propagation.adoc:35
