--- a/l10n/po/ja_JP/_guides/qute.adoc.po
+++ b/l10n/po/ja_JP/_guides/qute.adoc.po
@@ -32,24 +32,27 @@ msgstr "Quteは、Quarkus のニーズを満たすために特別に設計され
 
 #. type: Title ==
 #: upstream/_guides/qute.adoc:17
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Solution"
-msgstr ""
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/qute.adoc:21
+#, fuzzy
 msgid "We recommend that you follow the instructions in the next sections and create the application step by step.  However, you can go right to the completed example."
-msgstr ""
+msgstr "次のセクションの指示に従って、段階的にアプリケーションを作成していくことをお勧めします。ただし、完成した例にすぐにアクセスすることもできます。"
 
 #. type: Plain text
 #: upstream/_guides/qute.adoc:23
+#, fuzzy
 msgid "Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive]."
-msgstr ""
+msgstr "Gitリポジトリをクローンする： `git clone {quickstarts-clone-url}` 、または{quickstarts-archive-url}[archive]をダウンロードする。"
 
 #. type: Plain text
 #: upstream/_guides/qute.adoc:25
+#, fuzzy
 msgid "The solution is located in the `qute-quickstart` {quickstarts-tree-url}/qute-quickstart[directory]."
-msgstr ""
+msgstr "このソリューションは `qute-quickstart` {quickstarts-tree-url}/qute-quickstart[directory] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/qute.adoc:26
