--- a/l10n/po/ja_JP/_guides/tests-with-coverage.adoc.po
+++ b/l10n/po/ja_JP/_guides/tests-with-coverage.adoc.po
@@ -547,14 +547,15 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/tests-with-coverage.adoc:320
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Setting coverage thresholds for the Maven build"
-msgstr ""
+msgstr "Mavenのビルドにカバレッジのしきい値を設定する"
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:323
+#, fuzzy
 msgid "You can set thresholds for code coverage using the Jacoco Maven plugin. Note the element `<dataFile>${project.build.directory}/jacoco-quarkus.exec</dataFile>`. You must set it matching your choice for `quarkus.jacoco.data-file`."
-msgstr ""
+msgstr "コードカバレッジのしきい値は、Jacoco Mavenプラグインを使って設定することができます。 `&amp;lt;dataFile&amp;gt;${project.build.directory}/jacoco-quarkus.exec&amp;lt;/dataFile&amp;gt;` という要素に注目してください。 `quarkus.jacoco.data-file` の選択に合わせて設定する必要があります。"
 
 #. type: delimited block -
 #: upstream/_guides/tests-with-coverage.adoc:368
