--- a/l10n/po/ja_JP/_guides/writing-extensions.adoc.po
+++ b/l10n/po/ja_JP/_guides/writing-extensions.adoc.po
@@ -3677,34 +3677,39 @@ msgstr "エクステンションビーンズとの相互作用"
 
 #. type: Plain text
 #: upstream/_guides/writing-extensions.adoc:1826
+#, fuzzy
 msgid "There are various APIS that you can use to integrate with development mode, and to get information about the current state."
-msgstr ""
+msgstr "開発モードとの統合や、現在の状態に関する情報を得るために使用できる様々なAPISがあります。"
 
 #. type: Title ====
 #: upstream/_guides/writing-extensions.adoc:1827
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Handling restarts"
-msgstr ""
+msgstr "再起動への対応"
 
 #. type: Plain text
 #: upstream/_guides/writing-extensions.adoc:1831
+#, fuzzy
 msgid "When Quarkus is starting the `io.quarkus.deployment.builditem.LiveReloadBuildItem` is guaranteed to be present that gives information about this start, in particular:"
-msgstr ""
+msgstr "Quarkusの起動時には、特にこの起動に関する情報を与える `io.quarkus.deployment.builditem.LiveReloadBuildItem` が存在することが保証されています。"
 
 #. type: Plain text
 #: upstream/_guides/writing-extensions.adoc:1833
+#, fuzzy
 msgid "Is this a clean start or a live reload"
-msgstr ""
+msgstr "クリーンスタートなのか、ライブリロードなのか"
 
 #. type: Plain text
 #: upstream/_guides/writing-extensions.adoc:1834
+#, fuzzy
 msgid "If this is a live reload which changed files / classes triggered the reload"
-msgstr ""
+msgstr "ライブリロードで、変更されたファイルやクラスがリロードのきっかけになっている場合"
 
 #. type: Plain text
 #: upstream/_guides/writing-extensions.adoc:1837
+#, fuzzy
 msgid "It also provides a global context map you can use to store information between restarts, without needing to resort to static fields."
-msgstr ""
+msgstr "また、静的なフィールドに頼ることなく、再起動の間に情報を保存するために使用できるグローバルなコンテキストマップを提供しています。"
 
 #. type: Title ====
 #: upstream/_guides/writing-extensions.adoc:1838
@@ -3715,13 +3720,15 @@ msgstr "ホットリロードのテスト"
 
 #. type: Plain text
 #: upstream/_guides/writing-extensions.adoc:1843
+#, fuzzy
 msgid "Live reload is generally triggered by a HTTP request, however not all applications are HTTP applications and some extensions may want to trigger live reload based on other events. To do this you need to implement `io.quarkus.dev.spi.HotReplacementSetup` in your runtime module, and add a `META-INF/services/io.quarkus.dev.spi.HotReplacementSetup` that lists your implementation."
-msgstr ""
+msgstr "しかし、すべてのアプリケーションがHTTPアプリケーションであるとは限らず、エクステンションによっては他のイベントに基づいてライブリロードをトリガしたい場合もあります。これを実現するには、ランタイムモジュールで `io.quarkus.dev.spi.HotReplacementSetup` を実装し、その実装を示す `META-INF/services/io.quarkus.dev.spi.HotReplacementSetup` を追加する必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/writing-extensions.adoc:1846
+#, fuzzy
 msgid "On startup the `setupHotDeployment` method will be called, and you can use the provided `io.quarkus.dev.spi.HotReplacementContext` to initiate a scan for changed files."
-msgstr ""
+msgstr "起動時には `setupHotDeployment` メソッドが呼び出され、提供された `io.quarkus.dev.spi.HotReplacementContext` を使って変更されたファイルのスキャンを開始することができます。"
 
 #. type: Title ===
 #: upstream/_guides/writing-extensions.adoc:1847
