--- a/l10n/po/ja_JP/_posts/2021-03-15-micrometer-prometheus-openshift.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-03-15-micrometer-prometheus-openshift.adoc.po
@@ -380,13 +380,15 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:194
+#, fuzzy
 msgid "The path `/q/metrics` is the default metrics endpoint in Quarkus."
-msgstr ""
+msgstr "パス `/q/metrics` は、Quarkusのデフォルトのメトリクスエンドポイントです。"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:196
+#, fuzzy
 msgid "We could configure the `/metrics` endpoint Prometheus expects in `application.properties` instead of adding the path attribute above using the following property: `quarkus.micrometer.export.prometheus.path=/metrics`."
-msgstr ""
+msgstr "Prometheus が期待する `/metrics` エンドポイントを `application.properties` で設定することができます。上記のように path 属性を追加する代わりに、次のようなプロパティを使用します： `quarkus.micrometer.export.prometheus.path=/metrics`."
 
 #. type: delimited block -
 #: upstream/_posts/2021-03-15-micrometer-prometheus-openshift.adoc:202
